Changed FindJava and created ovningar 20